--- a/pom.xml
+++ b/pom.xml
@@ -5,17 +5,17 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>de.MCmoderSD</groupId>
-    <artifactId>mysql</artifactId>
-    <version>1.0.0</version>
+    <artifactId>jsql</artifactId>
+    <version>2.0.0</version>
 
-    <name>MySQL-Driver</name>
-    <description>A simple MySQL-Driver for connecting to a MySQL database</description>
+    <name>JSQL-Driver</name>
+    <description>A simple Java SQL driver for connecting to a SQL databases</description>
 
     <distributionManagement>
         <repository>
-            <id>MySQL-Driver</id>
+            <id>JSQL-Driver</id>
             <name>GitHub MCmoderSD Apache Maven Packages</name>
-            <url>https://maven.pkg.github.com/MCmoderSD/MySQL-Driver</url>
+            <url>https://maven.pkg.github.com/MCmoderSD/JSQL-Driver</url>
         </repository>
     </distributionManagement>
 
@@ -34,11 +34,32 @@
             <version>2.18.2</version>
         </dependency>
 
+        <!-- MariaDB -->
+        <dependency>
+            <groupId>org.mariadb.jdbc</groupId>
+            <artifactId>mariadb-java-client</artifactId>
+            <version>3.5.2</version>
+        </dependency>
+
+        <!-- Microsoft SQL Server -->
+        <dependency>
+            <groupId>com.microsoft.sqlserver</groupId>
+            <artifactId>mssql-jdbc</artifactId>
+            <version>12.8.1.jre11</version>
+        </dependency>
+
         <!-- MySQL -->
         <dependency>
             <groupId>com.mysql</groupId>
             <artifactId>mysql-connector-j</artifactId>
-            <version>9.1.0</version>
+            <version>9.2.0</version>
+        </dependency>
+
+        <!-- PostgreSQL -->
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.7.5</version>
         </dependency>
 
     </dependencies>
